--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -296,9 +296,9 @@ div[class^='codeBlockTitle'] {
 /* adding this back after original Docusaurus
    rules overwritten by .embedContainer
    TODO: fix what causes this */
-[class^='mainContentHeader'] {
-  margin-bottom: 20px;
-}
+// [class^='mainContentHeader'] {
+//   margin-bottom: 20px;
+// }
 
 /* add some more spacing for main doc container */
 [class^='docItemContainer'] {
